Beta permission handling

--- a/force-app/main/default/classes/stoUtilityBackgroundController.cls
+++ b/force-app/main/default/classes/stoUtilityBackgroundController.cls
@@ -18,10 +18,14 @@ public with sharing class stoUtilityBackgroundController {
 
     @AuraEnabled
     public static string getOnlineId() {
-        String statusId = String.valueOf(
-            [SELECT Id FROM ServicePresenceStatus WHERE DeveloperName = 'Skriv_til_oss']
-            ?.Id
-        );
-        return statusId.substring(0, 15);
+        if (FeatureManagement.checkPermission('NKS_Beta')) {
+            throw new AuraHandledException('BETA');
+        } else {
+            String statusId = String.valueOf(
+                [SELECT Id FROM ServicePresenceStatus WHERE DeveloperName = 'Skriv_til_oss']
+                ?.Id
+            );
+            return statusId.substring(0, 15);
+        }
     }
 }
