Securing person access in delegation

--- a/force-app/main/default/classes/nksGetStoUtilityController.cls
+++ b/force-app/main/default/classes/nksGetStoUtilityController.cls
@@ -5,6 +5,13 @@ public without sharing class nksGetStoUtilityController {
     public class NoCasesFoundException extends Exception {
     }
 
+    private static List<Id> skillIdList = new List<Id>();
+    private static List<Id> userConfidentialitySkills = new List<Id>();
+    private static final List<String> confidentialitySkills = new List<String>{
+        'Fortrolig_addresse',
+        'Skjermede_personer'
+    };
+
     @AuraEnabled
     public static List<Record> getSto() {
         List<Record> records = new List<Record>();
@@ -35,9 +42,9 @@ public without sharing class nksGetStoUtilityController {
         try {
             Integer attempt = 0;
             Id userId = UserInfo.getUserId();
-            List<Id> userSkillIds = getServiceResourceSkillIds(userId);
+            getServiceResourceSkillIds(userId);
             do {
-                Id nextCaseId = getNextSTOCase(userSkillIds);
+                Id nextCaseId = getNextSTOCase();
                 if (takeOwnership(nextCaseId, userId)) {
                     return nextCaseId;
                 }
@@ -143,30 +150,34 @@ public without sharing class nksGetStoUtilityController {
     }
 
     @TestVisible
-    private static List<Id> getServiceResourceSkillIds(Id userId) {
-        List<Id> skillIdList = new List<Id>();
+    private static void getServiceResourceSkillIds(Id userId) {
         for (ServiceResourceSkill srs : [
-            SELECT SkillId
+            SELECT SkillId, Skill.DeveloperName
             FROM ServiceResourceSkill
             WHERE ServiceResource.RelatedRecordId = :userId
         ]) {
-            skillIdList.add(srs.SkillId);
+            //Separating domain skills and person access skills
+            if (confidentialitySkills.contains(srs.Skill.DeveloperName)) {
+                userConfidentialitySkills.add(srs.SkillId);
+            } else {
+                skillIdList.add(srs.SkillId);
+            }
         }
-        return skillIdList;
     }
 
-    private static Id getNextSTOCase(List<Id> skillIdList) {
+    private static Id getNextSTOCase() {
         try {
             List<PendingServiceRouting> psr = [
                 SELECT Id, WorkItemId
                 FROM PendingServiceRouting
                 WHERE
                     Id IN (SELECT RelatedRecordId FROM SkillRequirement WHERE SkillId IN :skillIdList)
-                    AND WorkitemId IN (
-                        SELECT Id
-                        FROM Case
-                        WHERE RecordType.DeveloperName = 'STO_Case' AND Owner.Type = 'Queue'
+                    AND ID IN (
+                        SELECT RelatedRecordId
+                        FROM SkillRequirement
+                        WHERE SkillId IN :userConfidentialitySkills OR Skill.DeveloperName NOT IN :confidentialitySkills
                     )
+                    AND ServiceChannel.DeveloperName = 'Skriv_til_oss'
                     AND IsReadyForRouting = TRUE
                     AND isPushed = FALSE
                 ORDER BY RoutingPriority, SecondaryRoutingPriority, CreatedDate
