Added method comment

--- a/force-app/main/default/classes/nksGetStoUtilityController.cls
+++ b/force-app/main/default/classes/nksGetStoUtilityController.cls
@@ -178,6 +178,12 @@ public without sharing class nksGetStoUtilityController {
         }
     }
 
+    /**
+     * Queries the PSR with highest priority within your skill pool and ensures you have access to the person,
+     * that the case relates to
+     * @author Stian Ruud Schikora | 07-19-2022
+     * @return List<PendingServiceRouting>
+     **/
     private static List<PendingServiceRouting> getPendingServiceRouting() {
         return [
             SELECT Id, WorkItemId
