Adds active check for service skills

--- a/force-app/main/default/classes/nksGetStoUtilityController.cls
+++ b/force-app/main/default/classes/nksGetStoUtilityController.cls
@@ -154,7 +154,12 @@ public without sharing class nksGetStoUtilityController {
         for (ServiceResourceSkill srs : [
             SELECT SkillId, Skill.DeveloperName
             FROM ServiceResourceSkill
-            WHERE ServiceResource.RelatedRecordId = :userId
+            WHERE
+                ServiceResource.RelatedRecordId = :userId
+                AND EffectiveStartDate <= TODAY
+                AND (EffectiveEndDate >= TODAY
+                OR EffectiveEndDate = NULL)
+                AND ServiceResource.IsActive = TRUE
         ]) {
             //Separating domain skills and person access skills
             if (confidentialitySkills.contains(srs.Skill.DeveloperName)) {
