--- a/force-app/main/default/classes/STO_SurveyHelper.cls
+++ b/force-app/main/default/classes/STO_SurveyHelper.cls
@@ -1,7 +1,7 @@
 public without sharing class STO_SurveyHelper {
     @AuraEnabled
     public static Boolean canSendSurvey() {
-        return [SELECT COUNT() FROM SurveyResponse] < 300;
+        return true;
     }
 
     @AuraEnabled
