--- a/force-app/main/default/classes/STO_ReservationTimeCalulator.cls
+++ b/force-app/main/default/classes/STO_ReservationTimeCalulator.cls
@@ -4,32 +4,33 @@ global without sharing class STO_ReservationTimeCalulator implements Support.Mil
 
     global Integer calculateMilestoneTriggerTime(String caseId, String milestoneTypeId) {
 
-        if(milestoneTypeId == null && !Test.isRunningTest()) return DEFAULT_TIME;
+        if(milestoneTypeId == null) return DEFAULT_TIME;
 
         Datetime now = Datetime.now();
-        String weekDayEndTime = now.format('EEEE') + 'EndTime';
-        String query = 
-            'SELECT ' + 
-            weekDayEndTime +
-            ' FROM BusinessHours ' +
-            'WHERE Id IN (' +
-                'SELECT BusinessHoursId ' +
-                'FROM CaseMilestone ' +
-                'WHERE  MilestoneTypeId = :milestoneTypeId' +
-            ')' +
-            'LIMIT 1';
-        Time endOfDay;
+        Datetime nextStartDate;
+        BusinessHours bh;
         try{
-            endOfDay = Test.isRunningTest()?
-                Time.newInstance(21,0,0,0) :
-                (Time)((BusinessHours)Database.query(query)[0]).getPopulatedFieldsAsMap().get(weekDayEndTime);
-            if(endOfDay == null) return DEFAULT_TIME;
+                String query = 
+                    'SELECT Id ' +
+                    'FROM BusinessHours ' +
+                    'WHERE Id IN (' +
+                        'SELECT BusinessHoursId ' +
+                        'FROM CaseMilestone ' +
+                        'WHERE  MilestoneTypeId = :milestoneTypeId' +
+                    ') ' +
+                    'LIMIT 1';
+                bh = ((BusinessHours)Database.query(query)[0]);
         }catch(Exception e){
             return DEFAULT_TIME;
         }
-
-        if( (endOfDay != Time.newInstance(0,0,0,0) && now.time() > endOfDay) ) return DEFAULT_TIME;
-
-        return endOfDay.addHours(-now.time().hour()).hour() * 60 + endOfDay.addMinutes(-now.time().minute()).minute();
+        nextStartDate = BusinessHours.nextStartDate(
+                    bh.Id,
+                    Datetime.newInstance(
+                        now.date().addDays(1),
+                        Time.newInstance(0,0,0,0)
+                    )
+        );
+        Long diff = BusinessHours.diff(bh.Id, now, nextStartDate);
+        return (diff /1000 /60).intValue();
     }
 }
